k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nodejs-app
  labels:
    app.kubernetes.io/name: nodejs-container-app
    app.kubernetes.io/managed-by: kubectl
